# Anti-Greenhouses

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  worker.py
.github/workflows/: test.yml
configs/: config.example.app.env  config.example.email.env
configs/examples/: config.app.env  config.celery.env  config.mongo.env
docker/nginx/: nginx.conf
src/auth/: exceptions.py  jwt.py  security.py
src/auth/adapters/: orm.py
src/auth/adapters/repositories/: user.py  verification.py  verification.pyi
src/auth/domain/: model.py
src/auth/entrypoints/routers/: __init__.py  login.py  registration.py  registration_request.py  users.py  verifications.py
src/auth/entrypoints/schemas/: users.py  (+1 more)
src/auth/services/: exceptions.py  jwt.py  login.py  registration.py  registration_request.py  services.py  uow.py
src/base/: aliases.py  dependencies.py  exceptions.py  middlewares.py  schemas.py  send_email.py  uow.py
src/base/entrypoints/: middlewares.py  schemas.py
src/base/services/: services.py
tests/: conftest.py
tests/auth/: fake_repositories.py  fake_uow.py  test_fake_repositories.py
tests/auth/e2e/: _user.py  test_login.py  test_registration.py  test_registration_request.py  test_users.py  test_verifications.py
tests/auth/integration/: test_bad_login_repository.py  test_uow.py  test_user_repository.py  test_verification_repository.py  test_verification_uow.py
tests/auth/unit/: test_add_action.py  test_jwt.py  test_remove_action.py  test_services.py  test_user.py
tests/base/: fake_session.py  fake_uow.py
tests/base/e2e/: test_middlewares.py
tests/base/integration/: test_uow.py
tests/base/unit/: test_send_email.py  test_services.py
(+27 files in other folders)
