[tool.poetry]
name = "Anti-Greenhouses"
version = "0.1.0"
description = ""
authors = ["_Anti_"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.36"
sqlalchemy-stubs = "^0.4"
fastapi = {extras = ["all"], version = "^0.78.0"}
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.4"
mypy = "^0.960"
pathlib = "^1.0.1"
requests = "^2.27.1"
types-requests = "^2.27.30"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
