[tool.poetry]
name = "Anti-Greenhouses"
version = "0.4.0"
description = ""
authors = ["_Anti_"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.36"
sqlalchemy-stubs = "^0.4"
fastapi = {extras = ["all"], version = "^0.78.0"}
psycopg2-binary = "^2.9.3"
celery = "^5.2.7"
celery-types = "^0.13.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
types-passlib = "^1.7.7"
pymongo = "^4.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.4"
mypy = "^0.960"
flower = "^1.0.0"
pytest-mock = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
